--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
       .text-white {
         color: var(--white);
       }
+      html,
       body {
-        background-color: white;
+        margin: 0;
+        padding: 0;
       }
       ul.horizontal-list > li {
         display: inline-block;
@@ -126,6 +128,62 @@
         .sidebar-open-btn {
           display: block;
         }
+      }
+      /* bootstrap utilities */
+      .p-1 {
+        padding: 0.25rem !important;
+      }
+      .px-1 {
+        padding-right: 0.25rem !important;
+        padding-left: 0.25rem !important;
+      }
+      .py-1 {
+        padding-top: 0.25rem !important;
+        padding-bottom: 0.25rem !important;
+      }
+      .p-2 {
+        padding: 0.5rem !important;
+      }
+      .px-2 {
+        padding-right: 0.5rem !important;
+        padding-left: 0.5rem !important;
+      }
+      .py-2 {
+        padding-top: 0.5rem !important;
+        padding-bottom: 0.5rem !important;
+      }
+      .p-3 {
+        padding: 1rem !important;
+      }
+      .px-3 {
+        padding-right: 1rem !important;
+        padding-left: 1rem !important;
+      }
+      .py-3 {
+        padding-top: 1rem !important;
+        padding-bottom: 1rem !important;
+      }
+      .p-4 {
+        padding: 1.5rem !important;
+      }
+      .px-4 {
+        padding-right: 1.5rem !important;
+        padding-left: 1.5rem !important;
+      }
+      .py-4 {
+        padding-top: 1.5rem !important;
+        padding-bottom: 1.5rem !important;
+      }
+      .p-5 {
+        padding: 3rem !important;
+      }
+      .px-5 {
+        padding-right: 3rem !important;
+        padding-left: 3rem !important;
+      }
+      .py-5 {
+        padding-top: 3rem !important;
+        padding-bottom: 3rem !important;
       }
     </style>
     <noscript
