--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
       .text-white {
         color: var(--white);
       }
-      html,
-      body {
-        margin: 0;
-        padding: 0;
+      .text-decoration-none {
+        color: inherit;
+        text-decoration: none;
       }
       ul.horizontal-list > li {
         display: inline-block;
@@ -130,60 +129,63 @@
         }
       }
       /* bootstrap utilities */
+      .m-0 {
+        margin: 0;
+      }
       .p-1 {
-        padding: 0.25rem !important;
+        padding: 0.25rem;
       }
       .px-1 {
-        padding-right: 0.25rem !important;
-        padding-left: 0.25rem !important;
+        padding-right: 0.25rem;
+        padding-left: 0.25rem;
       }
       .py-1 {
-        padding-top: 0.25rem !important;
-        padding-bottom: 0.25rem !important;
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
       }
       .p-2 {
-        padding: 0.5rem !important;
+        padding: 0.5rem;
       }
       .px-2 {
-        padding-right: 0.5rem !important;
-        padding-left: 0.5rem !important;
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
       }
       .py-2 {
-        padding-top: 0.5rem !important;
-        padding-bottom: 0.5rem !important;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
       }
       .p-3 {
-        padding: 1rem !important;
+        padding: 1rem;
       }
       .px-3 {
-        padding-right: 1rem !important;
-        padding-left: 1rem !important;
+        padding-right: 1rem;
+        padding-left: 1rem;
       }
       .py-3 {
-        padding-top: 1rem !important;
-        padding-bottom: 1rem !important;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
       }
       .p-4 {
-        padding: 1.5rem !important;
+        padding: 1.5rem;
       }
       .px-4 {
-        padding-right: 1.5rem !important;
-        padding-left: 1.5rem !important;
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
       }
       .py-4 {
-        padding-top: 1.5rem !important;
-        padding-bottom: 1.5rem !important;
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
       }
       .p-5 {
-        padding: 3rem !important;
+        padding: 3rem;
       }
       .px-5 {
-        padding-right: 3rem !important;
-        padding-left: 3rem !important;
+        padding-right: 3rem;
+        padding-left: 3rem;
       }
       .py-5 {
-        padding-top: 3rem !important;
-        padding-bottom: 3rem !important;
+        padding-top: 3rem;
+        padding-bottom: 3rem;
       }
     </style>
     <noscript
@@ -200,31 +202,50 @@
   <body>
     <header>
       <!-- socials header section -->
-      <nav class="bg-secondary">
-        <ul class="horizontal-list text-white" style="list-style-type: none">
-          <li>
-            <i
-              class="bi-facebook"
-              style="font-size: 2rem; color: cornflowerblue"
-            ></i>
+      <nav class="bg-secondary py-2">
+        <ul
+          class="horizontal-list text-white m-0"
+          style="list-style-type: none"
+        >
+          <li class="px-1">
+            <a
+              href=""
+              class="text-decoration-none"
+              target="_blank"
+              rel="nofollow noreferrer"
+            >
+              <i class="bi-facebook" style="font-size: 1.3rem"></i
+            ></a>
           </li>
-          <li>
-            <i
-              class="bi-twitter"
-              style="font-size: 2rem; color: cornflowerblue"
-            ></i>
+          <li class="px-1">
+            <a
+              href=""
+              class="text-decoration-none"
+              target="_blank"
+              rel="nofollow noreferrer"
+            >
+              <i class="bi-twitter" style="font-size: 1.3rem"></i>
+            </a>
           </li>
-          <li>
-            <i
-              class="bi-instagram"
-              style="font-size: 2rem; color: cornflowerblue"
-            ></i>
+          <li class="px-1">
+            <a
+              href=""
+              class="text-decoration-none"
+              target="_blank"
+              rel="nofollow noreferrer"
+            >
+              <i class="bi-instagram" style="font-size: 1.3rem"></i>
+            </a>
           </li>
-          <li>
-            <i
-              class="bi-linkedin"
-              style="font-size: 2rem; color: cornflowerblue"
-            ></i>
+          <li class="px-1">
+            <a
+              href=""
+              class="text-decoration-none"
+              target="_blank"
+              rel="nofollow noreferrer"
+            >
+              <i class="bi-linkedin" style="font-size: 1.3rem"></i>
+            </a>
           </li>
         </ul>
       </nav>
