--- a/index.html
+++ b/index.html
@@ -97,8 +97,20 @@
         --dark: #ffffff;
         --white: #ffffff;
       }
+      .bg-primary {
+        background: var(--primary);
+      }
       .bg-secondary {
         background: var(--secondary);
+      }
+      .bg-white {
+        background: var(--white);
+      }
+      .text-primary {
+        color: var(--primary);
+      }
+      .text-secondary {
+        color: var(--secondary);
       }
       .text-white {
         color: var(--white);
@@ -106,6 +118,9 @@
       .text-decoration-none {
         color: inherit;
         text-decoration: none;
+      }
+      .shadow {
+        box-shadow: 0 0 5px 2px rgb(0 0 0 / 10%);
       }
       ul.horizontal-list > li {
         display: inline-block;
@@ -202,7 +217,7 @@
   <body>
     <header>
       <!-- socials header section -->
-      <nav class="bg-secondary py-2">
+      <nav class="bg-primary py-2">
         <ul
           class="horizontal-list text-white m-0"
           style="list-style-type: none"
@@ -214,7 +229,7 @@
               target="_blank"
               rel="nofollow noreferrer"
             >
-              <i class="bi-facebook" style="font-size: 1.3rem"></i
+              <i class="bi-facebook" style="font-size: 1.2rem"></i
             ></a>
           </li>
           <li class="px-1">
@@ -224,7 +239,7 @@
               target="_blank"
               rel="nofollow noreferrer"
             >
-              <i class="bi-twitter" style="font-size: 1.3rem"></i>
+              <i class="bi-twitter" style="font-size: 1.2rem"></i>
             </a>
           </li>
           <li class="px-1">
@@ -234,7 +249,7 @@
               target="_blank"
               rel="nofollow noreferrer"
             >
-              <i class="bi-instagram" style="font-size: 1.3rem"></i>
+              <i class="bi-instagram" style="font-size: 1.2rem"></i>
             </a>
           </li>
           <li class="px-1">
@@ -244,14 +259,14 @@
               target="_blank"
               rel="nofollow noreferrer"
             >
-              <i class="bi-linkedin" style="font-size: 1.3rem"></i>
+              <i class="bi-linkedin" style="font-size: 1.2rem"></i>
             </a>
           </li>
         </ul>
       </nav>
       <!-- menu header section -->
       <amp-mega-menu id="mega-menu" height="50" layout="fixed-height">
-        <nav>
+        <nav class="bg-white">
           <ul>
             <!-- list of menu items here -->
             <li>
