--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     >
   </head>
   <body>
-    <header>
+    <header class="shadow">
       <!-- socials header section -->
       <nav class="bg-primary py-2">
         <ul
