--- a/index.html
+++ b/index.html
@@ -1238,8 +1238,8 @@
         height="50"
         layout="fixed-height"
       >
-        <nav class="container">
-          <ul class="">
+        <nav class="container row end-xs">
+          <ul class="col-lg-6">
             <!-- list of menu items here -->
             <li>
               <h4 role="button">Me</h4>
