--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@
         layout="fixed-height"
       >
         <nav class="container row end-xs">
-          <ul class="col-lg-6">
+          <ul class="col-md-8 col-lg-6 row around-xs">
             <!-- list of menu items here -->
             <li>
               <h4 role="button">Me</h4>
