--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
       custom-element="amp-mega-menu"
       src="https://cdn.ampproject.org/v0/amp-mega-menu-0.1.js"
     ></script>
+    <!-- top tab menu -->
+    <script
+      async
+      custom-element="amp-selector"
+      src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"
+    ></script>
     <script
       async
       custom-element="amp-sidebar"
@@ -1242,7 +1248,7 @@
           <ul class="col-md-8 col-lg-6 row around-xs">
             <!-- list of menu items here -->
             <li>
-              <h4 role="button">Me</h4>
+              <h4 style="border-bottom: 2px solid" role="button">Profile</h4>
               <div role="dialog">more content</div>
             </li>
             <li>
