--- a/index.html
+++ b/index.html
@@ -427,20 +427,7 @@
         .col-md-9,
         .col-md-10,
         .col-md-11,
-        .col-md-12,
-        .col-md-offset-0,
-        .col-md-offset-1,
-        .col-md-offset-2,
-        .col-md-offset-3,
-        .col-md-offset-4,
-        .col-md-offset-5,
-        .col-md-offset-6,
-        .col-md-offset-7,
-        .col-md-offset-8,
-        .col-md-offset-9,
-        .col-md-offset-10,
-        .col-md-offset-11,
-        .col-md-offset-12 {
+        .col-md-12 {
           box-sizing: border-box;
           -webkit-box-flex: 0;
           -ms-flex: 0 0 auto;
@@ -528,54 +515,6 @@
           -ms-flex-preferred-size: 100%;
           flex-basis: 100%;
           max-width: 100%;
-        }
-
-        .col-md-offset-0 {
-          margin-left: 0;
-        }
-
-        .col-md-offset-1 {
-          margin-left: 8.33333333%;
-        }
-
-        .col-md-offset-2 {
-          margin-left: 16.66666667%;
-        }
-
-        .col-md-offset-3 {
-          margin-left: 25%;
-        }
-
-        .col-md-offset-4 {
-          margin-left: 33.33333333%;
-        }
-
-        .col-md-offset-5 {
-          margin-left: 41.66666667%;
-        }
-
-        .col-md-offset-6 {
-          margin-left: 50%;
-        }
-
-        .col-md-offset-7 {
-          margin-left: 58.33333333%;
-        }
-
-        .col-md-offset-8 {
-          margin-left: 66.66666667%;
-        }
-
-        .col-md-offset-9 {
-          margin-left: 75%;
-        }
-
-        .col-md-offset-10 {
-          margin-left: 83.33333333%;
-        }
-
-        .col-md-offset-11 {
-          margin-left: 91.66666667%;
         }
 
         .start-md {
