--- a/index.html
+++ b/index.html
@@ -597,20 +597,7 @@
         .col-lg-9,
         .col-lg-10,
         .col-lg-11,
-        .col-lg-12,
-        .col-lg-offset-0,
-        .col-lg-offset-1,
-        .col-lg-offset-2,
-        .col-lg-offset-3,
-        .col-lg-offset-4,
-        .col-lg-offset-5,
-        .col-lg-offset-6,
-        .col-lg-offset-7,
-        .col-lg-offset-8,
-        .col-lg-offset-9,
-        .col-lg-offset-10,
-        .col-lg-offset-11,
-        .col-lg-offset-12 {
+        .col-lg-12 {
           box-sizing: border-box;
           -webkit-box-flex: 0;
           -ms-flex: 0 0 auto;
