--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
       }
       amp-selector[role="tablist"].tabs-with-selector [role="tab"] {
         /* custom styling, feel free to change */
+        display: flex;
+        align-items: center;
         text-align: center;
         padding: var(--space-1);
       }
