--- a/index.html
+++ b/index.html
@@ -930,6 +930,14 @@
             >
               Honors
             </div>
+            <div
+              id="sample3-tab6"
+              role="tab"
+              aria-controls="sample3-tabpanel6"
+              option="5"
+            >
+              Contacts
+            </div>
           </amp-selector>
         </nav>
       </section>
