--- a/index.html
+++ b/index.html
@@ -890,52 +890,27 @@
             layout="fixed-height"
           >
             <div
-              id="sample3-tab1"
+              id="tab1"
               role="tab"
-              aria-controls="sample3-tabpanel1"
+              aria-controls="tabpanel1"
               option="0"
               selected
             >
               Profile
             </div>
-            <div
-              id="sample3-tab2"
-              role="tab"
-              aria-controls="sample3-tabpanel2"
-              option="1"
-            >
+            <div id="tab2" role="tab" aria-controls="tabpanel2" option="1">
               Competencies
             </div>
-            <div
-              id="sample3-tab3"
-              role="tab"
-              aria-controls="sample3-tabpanel3"
-              option="2"
-            >
+            <div id="tab3" role="tab" aria-controls="tabpanel3" option="2">
               Experience
             </div>
-            <div
-              id="sample3-tab4"
-              role="tab"
-              aria-controls="sample3-tabpanel4"
-              option="3"
-            >
+            <div id="tab4" role="tab" aria-controls="tabpanel4" option="3">
               Projects
             </div>
-            <div
-              id="sample3-tab5"
-              role="tab"
-              aria-controls="sample3-tabpanel5"
-              option="4"
-            >
+            <div id="tab5" role="tab" aria-controls="tabpanel5" option="4">
               Honors
             </div>
-            <div
-              id="sample3-tab6"
-              role="tab"
-              aria-controls="sample3-tabpanel6"
-              option="5"
-            >
+            <div id="tab6" role="tab" aria-controls="tabpanel6" option="5">
               Contacts
             </div>
           </amp-selector>
@@ -959,9 +934,9 @@
     <main class="container">
       <amp-selector id="myTabPanels" class="tabpanels">
         <div
-          id="sample3-tabpanel1"
+          id="tabpanel1"
           role="tabpanel"
-          aria-labelledby="sample3-tab1"
+          aria-labelledby="tab1"
           option
           selected
         >
@@ -975,37 +950,20 @@
             layout="responsive"
           ></amp-img>
         </div>
-        <div
-          id="sample3-tabpanel2"
-          role="tabpanel"
-          aria-labelledby="sample3-tab2"
-          option
-        >
+        <div id="tabpanel2" role="tabpanel" aria-labelledby="tab2" option>
           Tab two content...
         </div>
-        <div
-          id="sample3-tabpanel3"
-          role="tabpanel"
-          aria-labelledby="sample3-tab3"
-          option
-        >
+        <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3" option>
           Tab three content...
         </div>
-        <div
-          id="sample3-tabpanel4"
-          role="tabpanel"
-          aria-labelledby="sample3-tab4"
-          option
-        >
+        <div id="tabpanel4" role="tabpanel" aria-labelledby="tab4" option>
           Tab four content...
         </div>
-        <div
-          id="sample3-tabpanel5"
-          role="tabpanel"
-          aria-labelledby="sample3-tab5"
-          option
-        >
+        <div id="tabpanel5" role="tabpanel" aria-labelledby="tab5" option>
           Tab five content...
+        </div>
+        <div id="tabpanel6" role="tabpanel" aria-labelledby="tab6" option>
+          Tab six content...
         </div>
       </amp-selector>
       <amp-social-share type="system" aria-label="Share"></amp-social-share>
