--- a/index.html
+++ b/index.html
@@ -969,7 +969,14 @@
       <amp-social-share type="system" aria-label="Share"></amp-social-share>
     </main>
     <footer class="bg-secondary">
-      <div class="container py-5"></div>
+      <div class="container py-3">
+        <div class="row">
+          <div class="col-lg-3"></div>
+          <div class="col-lg-3"></div>
+          <div class="col-lg-3"></div>
+          <div class="col-lg-3"></div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
