--- a/index.html
+++ b/index.html
@@ -970,11 +970,11 @@
     </main>
     <footer class="bg-secondary">
       <div class="container py-3">
-        <div class="row">
-          <div class="col-lg-3"></div>
-          <div class="col-lg-3"></div>
-          <div class="col-lg-3"></div>
-          <div class="col-lg-3"></div>
+        <div class="text-center">
+          <small
+            >&copy; <a href="https://larven.co.tz">Larven</a> 2021. All rights
+            reserved.</small
+          >
         </div>
       </div>
     </footer>
