--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
       .text-white {
         color: var(--white);
       }
+      .text-center {
+        text-align: center;
+      }
       .text-decoration-none {
         color: inherit;
         text-decoration: none;
