--- a/index.html
+++ b/index.html
@@ -975,8 +975,11 @@
       <div class="container py-3">
         <div class="text-center">
           <small
-            >&copy; <a href="https://larven.co.tz">Larven</a> 2021. All rights
-            reserved.</small
+            >&copy;
+            <a class="text-decoration-none" href="https://larven.co.tz"
+              >Larven</a
+            >
+            2021. All rights reserved.</small
           >
         </div>
       </div>
