--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
     </main>
     <footer class="bg-secondary">
       <div class="container py-3">
-        <div class="text-center">
+        <div class="text-white text-center">
           <small
             >&copy;
             <a class="text-decoration-none" href="https://larven.co.tz"
