--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
       </amp-selector>
       <amp-social-share type="system" aria-label="Share"></amp-social-share>
     </main>
-    <footer class="bg-secondary">
+    <footer class="bg-primary">
       <div class="container py-3">
         <div class="text-white text-center">
           <small
