--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
         color: inherit;
         text-decoration: none;
       }
+      .flex {
+        display: flex;
+      }
+      .flex-column {
+        flex-direction: column;
+      }
       .shadow {
         box-shadow: 0 0 5px 2px rgb(0 0 0 / 10%);
       }
@@ -913,7 +919,7 @@
             <div id="tab5" role="tab" aria-controls="tabpanel5" option="4">
               Honors
             </div>
-            <div id="tab6" role="tab" aria-controls="tabpanel6" option="5">
+            <div id="contacts" role="tab" aria-controls="tabpanel6" option="5">
               Contacts
             </div>
           </amp-selector>
@@ -965,8 +971,121 @@
         <div id="tabpanel5" role="tabpanel" aria-labelledby="tab5" option>
           Tab five content...
         </div>
-        <div id="tabpanel6" role="tabpanel" aria-labelledby="tab6" option>
-          Tab six content...
+        <div id="tabpanel6" role="tabpanel" aria-labelledby="contacts" option>
+          <div style="margin: 2rem">
+            <div class="flex flex-column">
+              <h2>Contacts</h2>
+              <div class="bg-primary" style="height: 2px"></div>
+            </div>
+
+            <div class="row mt-2">
+              <div class="col-md-6 d-flex align-items-stretch">
+                <div class="info-box">
+                  <i class="bx bx-map"></i>
+                  <h3>My Address</h3>
+                  <p>A108 Adam Street, New York, NY 535022</p>
+                </div>
+              </div>
+
+              <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+                <div class="info-box">
+                  <i class="bx bx-share-alt"></i>
+                  <h3>Social Profiles</h3>
+                  <div class="social-links">
+                    <a href="#" class="twitter"
+                      ><i class="bi bi-twitter"></i
+                    ></a>
+                    <a href="#" class="facebook"
+                      ><i class="bi bi-facebook"></i
+                    ></a>
+                    <a href="#" class="instagram"
+                      ><i class="bi bi-instagram"></i
+                    ></a>
+                    <a href="#" class="google-plus"
+                      ><i class="bi bi-skype"></i
+                    ></a>
+                    <a href="#" class="linkedin"
+                      ><i class="bi bi-linkedin"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-6 mt-4 d-flex align-items-stretch">
+                <div class="info-box">
+                  <i class="bx bx-envelope"></i>
+                  <h3>Email Me</h3>
+                  <p>contact@example.com</p>
+                </div>
+              </div>
+              <div class="col-md-6 mt-4 d-flex align-items-stretch">
+                <div class="info-box">
+                  <i class="bx bx-phone-call"></i>
+                  <h3>Call Me</h3>
+                  <p>+1 5589 55488 55</p>
+                </div>
+              </div>
+            </div>
+
+            <form
+              action="forms/contact.php"
+              method="post"
+              role="form"
+              class="php-email-form mt-4"
+            >
+              <div class="row">
+                <div class="col-md-6 form-group">
+                  <input
+                    type="text"
+                    name="name"
+                    class="form-control"
+                    id="name"
+                    placeholder="Your Name"
+                    required=""
+                  />
+                </div>
+                <div class="col-md-6 form-group mt-3 mt-md-0">
+                  <input
+                    type="email"
+                    class="form-control"
+                    name="email"
+                    id="email"
+                    placeholder="Your Email"
+                    required=""
+                  />
+                </div>
+              </div>
+              <div class="form-group mt-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  name="subject"
+                  id="subject"
+                  placeholder="Subject"
+                  required=""
+                />
+              </div>
+              <div class="form-group mt-3">
+                <textarea
+                  class="form-control"
+                  name="message"
+                  rows="5"
+                  placeholder="Message"
+                  required=""
+                ></textarea>
+              </div>
+              <div class="my-3">
+                <div class="loading">Loading</div>
+                <div class="error-message"></div>
+                <div class="sent-message">
+                  Your message has been sent. Thank you!
+                </div>
+              </div>
+              <div class="text-center">
+                <button type="submit">Send Message</button>
+              </div>
+            </form>
+          </div>
         </div>
       </amp-selector>
       <amp-social-share type="system" aria-label="Share"></amp-social-share>
