--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
         <div id="tabpanel6" role="tabpanel" aria-labelledby="contacts" option>
           <div style="margin: 2rem">
             <div class="flex flex-column">
-              <h2>Contacts</h2>
+              <h2 style="margin-bottom: 0.25rem">Contacts</h2>
               <div class="bg-primary" style="height: 2px"></div>
             </div>
 
