--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
         </div>
         <div id="tabpanel6" role="tabpanel" aria-labelledby="contacts" option>
           <div style="margin: 2rem">
-            <div class="flex flex-column">
+            <div class="flex flex-column start-xs">
               <h2 style="margin-bottom: 0.25rem">Contacts</h2>
               <div class="bg-primary" style="height: 2px"></div>
             </div>
