--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
       .flex {
         display: flex;
       }
+      .inline-flex {
+        display: inline-flex;
+      }
       .flex-column {
         flex-direction: column;
       }
@@ -973,7 +976,7 @@
         </div>
         <div id="tabpanel6" role="tabpanel" aria-labelledby="contacts" option>
           <div style="margin: 2rem">
-            <div class="flex flex-column start-xs">
+            <div class="inline-flex flex-column">
               <h2 style="margin-bottom: 0.25rem">Contacts</h2>
               <div class="bg-primary" style="height: 2px"></div>
             </div>
