--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@
         display: inline;
         /* this fix is needed for IE7- */
       }
+      .items-stretch {
+        align-items: stretch;
+      }
       amp-img {
         background-color: gray;
         border: 1px solid black;
@@ -982,7 +985,7 @@
             </div>
 
             <div class="row mt-2">
-              <div class="col-md-6 d-flex align-items-stretch">
+              <div class="col-md-6 flex items-stretch">
                 <div class="info-box">
                   <i class="bx bx-map"></i>
                   <h3>My Address</h3>
@@ -990,7 +993,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+              <div class="col-md-6 mt-4 mt-md-0 flex items-stretch">
                 <div class="info-box">
                   <i class="bx bx-share-alt"></i>
                   <h3>Social Profiles</h3>
@@ -1014,14 +1017,14 @@
                 </div>
               </div>
 
-              <div class="col-md-6 mt-4 d-flex align-items-stretch">
+              <div class="col-md-6 mt-4 flex items-stretch">
                 <div class="info-box">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
                   <p>contact@example.com</p>
                 </div>
               </div>
-              <div class="col-md-6 mt-4 d-flex align-items-stretch">
+              <div class="col-md-6 mt-4 flex items-stretch">
                 <div class="info-box">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
