--- a/index.html
+++ b/index.html
@@ -972,8 +972,8 @@
               <h2 style="margin-bottom: 0.25rem">Contacts</h2>
               <div class="bg-primary" style="height: 2px"></div>
             </div>
-
-            <div class="row mt-2">
+            <br />
+            <div class="row">
               <div class="col-md-6 flex items-stretch">
                 <div class="card">
                   <i class="bx bx-map"></i>
@@ -981,8 +981,8 @@
                   <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
               </div>
-
-              <div class="col-md-6 mt-4 mt-md-0 flex items-stretch">
+              <br />
+              <div class="col-md-6 flex items-stretch">
                 <div class="card">
                   <i class="bx bx-share-alt"></i>
                   <h3>Social Profiles</h3>
@@ -1005,15 +1005,16 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-md-6 mt-4 flex items-stretch">
+              <br />
+              <div class="col-md-6 flex items-stretch">
                 <div class="card">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
                   <p>contact@example.com</p>
                 </div>
               </div>
-              <div class="col-md-6 mt-4 flex items-stretch">
+              <br />
+              <div class="col-md-6 flex items-stretch">
                 <div class="card">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
