--- a/index.html
+++ b/index.html
@@ -973,9 +973,9 @@
               <div class="bg-primary" style="height: 2px"></div>
             </div>
             <br />
-            <div class="row">
+            <div class="row between-xs">
               <div class="col-md-6 flex items-stretch">
-                <div class="card">
+                <div class="card shadow">
                   <i class="bx bx-map"></i>
                   <h3>My Address</h3>
                   <p>A108 Adam Street, New York, NY 535022</p>
@@ -983,7 +983,7 @@
               </div>
               <br />
               <div class="col-md-6 flex items-stretch">
-                <div class="card">
+                <div class="card shadow">
                   <i class="bx bx-share-alt"></i>
                   <h3>Social Profiles</h3>
                   <div class="social-links">
@@ -1007,7 +1007,7 @@
               </div>
               <br />
               <div class="col-md-6 flex items-stretch">
-                <div class="card">
+                <div class="card shadow">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
                   <p>contact@example.com</p>
@@ -1015,7 +1015,7 @@
               </div>
               <br />
               <div class="col-md-6 flex items-stretch">
-                <div class="card">
+                <div class="card shadow">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
                   <p>+1 5589 55488 55</p>
