--- a/index.html
+++ b/index.html
@@ -756,8 +756,14 @@
         }
       }
       /* bootstrap utilities */
+      .w-100 {
+        width: 100%;
+      }
       .m-0 {
         margin: 0;
+      }
+      .mb-3 {
+        margin-bottom: 1rem;
       }
       .mx-auto {
         margin-left: auto;
@@ -968,22 +974,19 @@
         </div>
         <div id="tabpanel6" role="tabpanel" aria-labelledby="contacts" option>
           <div style="margin: 2rem">
-            <div class="inline-flex flex-column">
-              <br />
+            <div class="inline-flex flex-column mb-3">
               <h2 style="margin-bottom: 0.25rem">Contacts</h2>
               <div class="bg-primary" style="height: 2px"></div>
             </div>
             <div class="row between-xs">
-              <br />
-              <div class="col-md-6 flex items-stretch">
+              <div class="col-md-6 flex items-stretch mb-3">
                 <div class="card shadow">
                   <i class="bx bx-map"></i>
                   <h3>My Address</h3>
                   <p>A108 Adam Street, New York, NY 535022</p>
                 </div>
               </div>
-              <div class="col-md-6 flex items-stretch">
-                <br />
+              <div class="col-md-6 flex items-stretch mb-3">
                 <div class="card shadow">
                   <i class="bx bx-share-alt"></i>
                   <h3>Social Profiles</h3>
@@ -1006,16 +1009,14 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 flex items-stretch">
-                <br />
+              <div class="col-md-6 flex items-stretch mb-3">
                 <div class="card shadow">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
                   <p>contact@example.com</p>
                 </div>
               </div>
-              <div class="col-md-6 flex items-stretch">
-                <br />
+              <div class="col-md-6 flex items-stretch mb-3">
                 <div class="card shadow">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
